# Polar-Primes

./: CMakeLists.txt  LICENCE.txt  readme.md
.github/workflows/: cmake-multi-platform.yml
assets/: point.frag  point.vert
src/: main.cpp  shader.cpp  shader.hpp
